# reference-frame

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  README.md  electron-builder.yml  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: release.yml
docs/: plan-0.3.0-practice-notes.md  plan-0.3.1-mac.md  plan-0.4.0-structured-reports.md  release-checklist.md
engine/: engine_entry.py  pyproject.toml  refframe-engine.spec
engine/refframe_engine/: __init__.py  baselines.py  cli.py  doctor.py  download.py  events.py  paths.py  pose_extraction.py  pose_refine.py  run.py  setup_models.py  stdio.py
engine/tests/: test_ndjson.py
prompts/: coach-system.md
resources/pro_baselines/: baselines.json  jordan_tatiana_pro_reference2.metrics.json  semion_maria_oslo_2025.metrics.json  semion_maria_winter_white_2024.metrics.json  semion_maria_wotp_2024.metrics.json
scripts/: build-engine.ps1  build-engine.sh
src/main/: config.ts  engine.ts  env.d.ts  index.ts  library.ts  metrics.test.ts  metrics.ts  pros.test.ts  pros.ts  queue.test.ts  queue.ts
src/main/coach/: advise.test.ts  advise.ts  cli.ts  client.ts  focuses.ts  key.ts
src/main/notes/: blocks.test.ts  blocks.ts  excerpts.test.ts  excerpts.ts  hubmap.ts  writer.test.ts  writer.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  gap.test.ts  gap.ts
src/renderer/src/assets/: app.css  main.css  tokens.css
src/renderer/src/metrics/: registry.ts  resolve.ts
src/renderer/src/views/: Analyze.tsx  Coach.tsx  Compare.tsx  GapBars.tsx  Library.tsx  MetricCards.tsx  Onboarding.tsx  Pros.tsx  Report.tsx  Settings.tsx  engineProgress.ts  shared.tsx
