[project]
name = "refframe-engine"
version = "0.1.0"
description = "Reference Frame analysis engine — WCS dance video review vs pro baselines"
requires-python = ">=3.11,<3.13"
# Versions are FROZEN to the Dance Analysis dev environment (the source
# pipeline), verified byte-identical via the report/gap golden diffs. Source env:
#   Python 3.14.4 · numpy 2.4.4 · scipy 1.17.1 · librosa 0.11.0 · numba 0.65.0 ·
#   llvmlite 0.47.0 · ultralytics 8.4.39 · rtmlib 0.0.15 · onnxruntime 1.27.0 ·
#   opencv-python 4.13.0.92 · soundfile 0.13.1 · audioread 3.1.0 ·
#   imageio-ffmpeg 0.6.0 · yt-dlp 2026.3.17 · torch 2.11.0 · torchvision 0.26.0.
# The engine runs Python 3.12 (PyInstaller target, requires-python <3.13); the
# numeric packages are pinned to the SAME versions as the 3.14 source env so
# report/gap float formatting stays byte-identical across the two interpreters.
#
# opencv-python matches the source's opencv-python (same 4.13.0.92). NOTE: the
# headless variant cannot be used here — rtmlib hard-depends on the non-headless
# opencv-python (unpinned), so declaring headless left TWO cv2 packages in the
# env and pip's resolver pulled opencv-python/opencv-contrib-python 5.0.0.93,
# making cv2 resolve to 5.0 and mismatch the source (4.13.0.92). Pinning the
# non-headless opencv-python here keeps a single cv2 at the source version.
#
# torch / torchvision are NOT listed here: they arrive transitively via
# ultralytics. The build venv must install the CPU-only torch wheel FIRST
# (--index-url https://download.pytorch.org/whl/cpu) or the bundle balloons with
# CUDA. pose_lift.py imports torch directly and relies on that pre-install.
# Golden diffs pass with CPU torch 2.11.0+cpu (matches the source torch version).
dependencies = [
    "ultralytics==8.4.39",         # YOLOv8-pose multi-person tracking (pass 1); pulls torch
    "rtmlib==0.0.15",              # RTMPose top-down refinement, Halpe-26 w/ feet (pass 2)
    "onnxruntime==1.27.0",         # inference backend for rtmlib
    "opencv-python==4.13.0.92",    # video I/O (rtmlib forces non-headless opencv-python)
    "numpy==2.4.4",
    "scipy==1.17.1",               # signal processing (Savitzky-Golay, FFT, peaks)
    "librosa==0.11.0",             # beat / tempo detection (pulls numba, llvmlite)
    "numba==0.65.0",               # pinned: JITs librosa's beat_track (audio metrics)
    "llvmlite==0.47.0",            # numba's codegen backend (pin with numba)
    "soundfile==0.13.1",           # audio backend for librosa
    "audioread==3.1.0",            # librosa audio decode fallback
    "imageio-ffmpeg==0.6.0",       # bundled ffmpeg binary (no system install needed)
    # yt-dlp is the ONE deliberate deviation from the frozen source-env
    # versions above: YouTube rotates its URL signing, so a stale yt-dlp
    # starts 403ing mid-download (bit us at 2026.3.17 in July 2026). It is
    # download-only — analysis never imports it — so golden diffs are
    # unaffected; bump it freely whenever downloads break. Note 2026.4+
    # prefers an external JS runtime (deno) for full format coverage; without
    # one it falls back to a non-JS client, which currently works fine.
    "yt-dlp==2026.7.4",            # YouTube / video download (used in-process, not subprocess)
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.21",
    "pytest>=8.0",
]

[project.scripts]
refframe-engine = "refframe_engine.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["refframe_engine"]
